# Midori

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md
benchmark/: midori_benchmark.cpp
data/: midori.desktop  resource.rc
data/shaders/dxil/: CMakeLists.txt  erase.cs.hlsl  layer.ps.hlsl  layer.vs.hlsl  merge.cs.hlsl  paint.cs.hlsl  tile.ps.hlsl  tile.vs.hlsl
data/shaders/spirv/: CMakeLists.txt  erase.comp.glsl  layer.frag.glsl  layer.vert.glsl  merge.comp.glsl  paint.comp.glsl  tile.frag.glsl  tile.vert.glsl
data/shaders/vulkan/: layer.frag.glsl  merge.comp.glsl  paint.comp.glsl  tile.vert.glsl
data/tiles/: 1.qoi  1024.qoi  128.qoi  2.qoi  256.qoi  512.qoi
include/: qoi.h  uuid.h
include/glad/: gl.h  wgl.h
include/midori/: app.h  array.h  canvas.h  color.h  command.h  history.h  layers.h  memory.h  renderer.h  ring_array.h  tiles.h  types.h  viewport.h  waypoint.h
include/qoi/: qoi.h
src/: CMakeLists.txt  app.cpp  app.h  brushes.h  canvas.cpp  canvas.h  color.h  colors.h  commands.cpp  commands.h  defines.h  history.cpp  layers.cpp  layers.h  main.cpp  memory.cpp  memory.h  plaform.cpp  platform.h  renderer.cpp  renderer.h  resource.h  ring_array.h  states.cpp  states.h  tiles.h  types.h  ui.cpp  ui.h  version.h.in  viewport.cpp  viewport.h  waypoint.cpp  waypoint.h
src/commands/: commands.cpp  commands.h  history.cpp  history.h
src/core/: brush.h  ring_array.h
src/glad/: gl.c  wgl.c
src/midori/: history.cpp  layers.cpp  viewport.cpp  waypoint.cpp
test/: midori_history_test.cpp  midori_ring_array_test.cpp  midori_test.cpp
